--- a/.gitignore
+++ b/.gitignore
@@ -99,7 +99,7 @@ atlassian-ide-plugin.xml
 .idea/replstate.xml
 
 # SonarLint plugin
-.idea/sonarlint/*
+.idea/sonarlint/git
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
