--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,osx,clion+all,cmake,c++
 
 build*
+.vscode*
